resources/app-sre/app-interface-production/qontract-api-temp.service.yaml
---
# this service is required for visual-qontract to be operational
apiVersion: v1
kind: Service
metadata:
  name: qontract-api-nginx-gate
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: qontract-api
  sessionAffinity: None
  type: ClusterIP
