resources/app-sre/app-interface-production/app-interface-internal.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: app-interface
  name: app-interface
spec:
  host: app-interface.apps.appsrep05ue1.zqxk.p1.openshiftapps.com
  port:
    targetPort: app-interface
  to:
    kind: Service
    name: app-interface
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
